- solved a layout issue in debriefing.html with visibility of the tools buttons on lower screen resolutions

--- a/debriefing.css
+++ b/debriefing.css
@@ -164,17 +164,21 @@ body{
 /*********************************************/
 /*********controls and tools elements*********/
 
-.language{
-    width: 2rem;
-    height: 2rem;
+.languages{
+    display: inline-block;
     text-align: center;
     color: grey;
     font-family: Komplexitater;
     font-size: x-large;
     display: inline-block;
-    top: 15%;
     left: 1rem;
+    bottom: 1rem;
+    position: absolute;
+}
+
+.language{
     cursor: pointer;
+    display: inline;
 }
 
 .active{
@@ -182,13 +186,11 @@ body{
 }
 
 .tools{
-    height: 90%;
-    margin-left:20%;
-    margin-top: 0.5rem;
-    width: auto;
-    padding: 0.3rem;
-    position: relative;
     display: inline-block;
+    position: absolute;
+    bottom: 0;
+    right: 1rem;
+    height: 3rem ;
 }
 
 .tool{
@@ -430,7 +432,3 @@ body{
     top:0rem;
     right: 0rem;
 }
-
-
-
-/*** ***************** ***/
